[package]
name = "wm8731-another-hal"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["wm8731", "hal", "embedded","embedded-hal"]
categories = ["hardware-support", "no-std"]
description = "low level abstraction for the Cirrus Logic/Wolfson WM8731 audio codec IC"
readme = "README.md"
homepage = "https://github.com/YruamaLairba/wm8731-another-hal"
repository = "https://github.com/YruamaLairba/wm8731-another-hal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
