[package]
name = "wm8731-another-hal"
version = "0.1.0"
authors = [
    "Yruama Lairba aka Amaury Abrial <yruama_lairba@hotmail.com>"
]
edition = "2021"
description = "Thin abstraction for the Cirrus Logic/Wolfson WM8731 audio codec IC"
readme = "README.md"
homepage = "https://github.com/YruamaLairba/wm8731-another-hal"
#documentation
repository = "https://github.com/YruamaLairba/wm8731-another-hal"
license = "MIT OR Apache-2.0"
keywords = ["wm8731", "hal", "audio", "codec", "wolfson", "cirrus-logic", ]
categories = [ "embedded", "no-std", "hardware-support"]
exclude = ["WM8731_WAN0117.pdf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
